# munify-chase

./: .dockerignore  .env.development  .gitattributes  .gitignore  .gqtyrc.json  .typesafe-i18n.json  CONTRIBUTING.md  Dockerfile  Dockerfile.backend  Dockerfile.chase.backend  Dockerfile.chase.backend.db-migration  Dockerfile.chase.backend.seed  Dockerfile.chase.frontend  LICENSE.md  README.md  biome.json  bun.lockb  bunfig.toml  dev.docker-compose.yml  eslint.config.mjs  git-crypt-key  mock-oidc-landingpage.html  next.config.js  next.config.mjs  package-lock.json  package.json  rome.json  tailwind.config.ts  todo_sync.js  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  enhancement.md
.github/workflows/: build.yml  build_publish_container_images.yml  codeql.yml  lint.yml  release.yml  (+1 more)
auth/: README.md  bun.lockb  docker-compose.yml  package-lock.json  package.json  tsconfig.json
authentication/: README.md  bun.lockb  package.json  tsconfig.json
chase/: README.md
chase/rust-backend/: Cargo.toml  docker-compose.yml
chase/rust-backend/entity/: Cargo.toml
chase/rust-backend/migration/: Cargo.toml
chase/rust-backend/src/: config.rs  error.rs  main.rs
chase/rust-backend/src/committees/: mod.rs  query.rs  repo.rs
chase/rust-backend/src/conferences/: mod.rs  query.rs  repo.rs
chase/rust-backend/src/traits/: repo.rs
chase/rust-backend/src/users/: mod.rs  query.rs  repo.rs
helpers/: README.md  bun.lockb  package.json
munify-util/: README.md  bun.lockb  package.json
old/: Dockerfile.chase.frontend  biome.json  package.json  run_dev.sh
prisma/: countryCodeUtils.ts  db.ts  pothos.config.js  seed.ts
seedscript/: README.md  bun.lockb  package.json
todo-sync/: index_template.html  main.py  todo_parser.py  todo_sync.py  todos.json
util/: countryCodeUtils.ts  envloader.ts
(+921 files in other folders)
