[package]
name = "chase-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {version = "7.0.2", features = ["chrono", "graphiql"]}
async-graphql-poem = "7.0.2"
chrono = "0.4.35"
config = "0.14.0"
dotenv = "0.15.0"
log = "0.4.21"
poem = "2.0.1"
serde = { version = "1.0.197", features = ["derive"] }
simple_logger = "4.3.3"
surrealdb = "1.3.0"
tokio = { version = "1.36.0", features = ["full", "macros", "rt-multi-thread"] }
