[package]
name = "chase-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
async-graphql = {version = "7.0.2", features = ["chrono", "graphiql"]}
async-graphql-axum = "7.0.3"
axum = "0.7.4"
chrono = "0.4.35"
config = "0.14.0"
dotenv = "0.15.0"
log = "0.4.21"
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono" ] }
serde = { version = "1.0.197", features = ["derive"] }
simple_logger = "4.3.3"
tokio = { version = "1.36.0", features = ["full", "macros", "rt-multi-thread"] }
